[OpenNeuro] Recorded changes

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,5 @@
+1.1.3 2023-11-10
+  - Added anti-seizure medications and age of onset of epilepsy
 1.1.2 2023-11-07
   - updated tsv participants with medication and hipp volumes
 1.1.1 2023-08-26
