--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,5 @@
+1.1.4 2024-09-13
+  - Updated citation to published article in PLOS ONE.
 1.1.3 2023-11-10
   - Added anti-seizure medications and age of onset of epilepsy
 1.1.2 2023-11-07
